--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,5 +1,17 @@
+
+body{
+  color: goldenrod;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  top: 5%;
+}
 .App {
   text-align: center;
+  position: relative;
+  z-index: 2;
+  top: 5%;
 }
 
 .App-logo {
@@ -36,3 +48,4 @@
     transform: rotate(360deg);
   }
 }
+
