--- a/frontend/src/styles/Buttons.css
+++ b/frontend/src/styles/Buttons.css
@@ -23,6 +23,12 @@ button:active{
     -webkit-box-shadow: 0px 5px 6px -7px #000000, 2px 2px 7px 2px rgba(37, 36, 36, 0); 
     box-shadow: 0px 15px 6px -7px #000000, 2px 2px 7px 2px rgba(29, 28, 28, 0);
 }
+.buttons-div {
+    position:fixed;
+    width:30%;
+    bottom:10%;
+    left:35%;
+}
 @media screen {
     button{
         position: relative;
