--- a/frontend/src/styles/Result.css
+++ b/frontend/src/styles/Result.css
@@ -1,28 +1,24 @@
 .content{
-    margin: 100px;
+    margin: 10px;
     padding:100px;
     border-color: black;
-   
-
 }
 .message{
-
     font-size: x-large;
-    margin: 100px;
-    
-
+    padding: 100px;
+    border: 1px dotted chocolate;
 }
 .score {
     margin: 100px;
     font-size: x-large;
 }
-@media screen {
+@media screen and (max-width: 600px) {
     .content{
         margin: 10px;
         padding:10px;
-        border-color: black;
-        
-    
+    }
+    .message{
+        padding: 10px; 
     }
     
 }
